Added post thread endpoint
